changes module details

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,7 +24,16 @@
       "TEXT": "Sales",
       "LIST": {
         "PAYMENTCOLLECTION": "Payment Collection Plan",
-        "TURNOVER": "Turnover"
+        "TURNOVER": "Turnover",
+        "DEVELOPMENTCOSTDETAILS":"Developent Cost Details"
+   
+      }
+    },
+    "PURCHASE": {
+      "TEXT": "Purchase",
+      "LIST": {
+        "Supplierwise purchase and CR in Tons": "Supplierwise purchase and CR in Tons"
+        
    
       }
     }
