customer-receivable-chart,top5-suppliers-cr-percent

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -36,7 +36,20 @@
         
    
       }
-    }
-  
+    },
+    "FINANCE": {
+      "TEXT": "Finance",
+      "LIST": {
+        "CUSTOMERRECEIVABLECHART": "Customer receivable chart"
+        
+      }, 
+      "PURCHASE": {
+        "TEXT": "Purchase",
+        "LIST": {
+          "Top5SuppliersCrPercent": "Top5 Suppliers Cr Percent"
+        }       
   }
 }
+} 
+}
+  
