WIP Machine shop, oil consumption, customer receivable chart

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,6 +43,12 @@
       "LIST": {
         "CUSTOMERRECEIVABLECHART": "Customer receivable chart"
       }
+    },
+    "WIPMACHINESHOP": {
+      "TEXT": "wip-machine-shop",
+      "LIST": {
+        "OILCONSUMPTION":"oil consumption"
+      }
     }
   }
 }
