--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,15 +25,12 @@
         "PAYMENTCOLLECTION": "Payment Collection Plan",
         "TURNOVER": "Turnover",
         "DEVELOPMENTCOSTDETAILS": "Developent Cost Details",
-<<<<<<< Updated upstream
          "DAILYSALESDATA": "Daily Sales data",
          "MONTHLYSALESANDTARGET": "Monthly Sales and Target",
-         "CUSTOMERWISEPLANVS.ACTUALSALE": " Customer wise Plan Vs. Actual Sale"
-=======
+         "CUSTOMERWISEPLANVS.ACTUALSALE": " Customer wise Plan Vs. Actual Sale",
         "MONTHLYVALUEADDITIONTARGETV/SACTUAL":"Monthly Value Addition target V/s Actual",
         "SCHUDLEADHERENCEFORTHEMONTH":"schedule adherence for the month"
 
->>>>>>> Stashed changes
       }
     },
     "PURCHASE": {
