css changes , sales-customer ci grade rate per kg

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,7 +17,9 @@
         "SCHUDLEADHERENCEFORTHEMONTH": "Schedule Adherence for the Month",
         "CUSTOMERWISEPLANVS.ACTUALSALE": " Customer wise Plan Vs. Actual Sale",
         "MONTHLYVALUEADDITIONTARGETV/SACTUAL": "Monthly Value Addition target V/s Actual",
-        "MONTHLYSALESANDTARGET": "Monthly Sales and Target"
+        "MONTHLYSALESANDTARGET": "Monthly Sales and Target",
+      
+        "CUSTOMERCIGRADEPERKGRATEREALIZATION":"Customer CI Per Kg Rate Realization"
       }
     },
     "FINANCE": {
