Change in names

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -35,9 +35,9 @@
       }
     },
     "WIPMACHINESHOP": {
-      "TEXT": "wip-machine-shop",
+      "TEXT": "Wip-Machine-Shop",
       "LIST": {
-        "OILCONSUMPTION": "oil consumption"
+        "OILCONSUMPTION": "Oil Consumption"
       }
     },
     "SUBCONTRACT": {
