quality-control module -customer wise complaints received

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -46,6 +46,13 @@
       "LIST": {
         "SUPPLIERWISEBORINGRECOVERYDETAILS": "Supplier Wise Boring Recovery Details"
       }
+    },
+    "QUALITYCONTROL":{
+      "TEXT":"Quatity Control",
+      "LIST": {
+        "CUSTOMERWISECOMPLAINTSRECEIVED":"Customer Wise Complaints Received"
+      }
     }
+    
   }
 }
