add functionality to quality control

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,7 +32,8 @@
       "TEXT": "Purchase",
       "LIST": {
         "SUPPLIERWISEPURCHASEANDCRNTONS": "Supplierwise Purchase And CR In Tons",
-        "TOP5SUPPLIERSCRPERCENT": "Top5 Suppliers Cr Percent"
+        "TOP5SUPPLIERSCRPERCENT": "Top5 Suppliers Cr Percent",
+        "PURCHASETONNAGE": "Purchase Tonnage"
       }
     },
     "WIPMACHINESHOP": {
@@ -42,10 +43,17 @@
       }
     },
     "SUBCONTRACT": {
-      "TEXT": "Subcontract",
+      "TEXT": "subcontract",
       "LIST": {
         "SUPPLIERWISEBORINGRECOVERYDETAILS": "Supplier Wise Boring Recovery Details"
       }
+    },
+    "QUALITYCONTROL":{
+      "TEXT":"Quatity Control",
+      "LIST": {
+        "CUSTOMERWISECOMPLAINTSRECEIVED":"Customer Wise Complaints Received"
+      }
     }
+    
   }
 }
