--- a/DASHBOARD/assets/i18n/en.json
+++ b/DASHBOARD/assets/i18n/en.json
@@ -47,6 +47,13 @@
       "LIST": {
         "SUPPLIERWISEBORINGRECOVERYDETAILS": "Supplier Wise Boring Recovery Details"
       }
+    },
+    "QUALITYCONTROL":{
+      "TEXT":"Quatity Control",
+      "LIST": {
+        "CUSTOMERWISECOMPLAINTSRECEIVED":"Customer Wise Complaints Received"
+      }
     }
+    
   }
 }
