--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,9 +18,10 @@
         "CUSTOMERWISEPLANVS.ACTUALSALE": " Customer Wise Plan Vs. Actual Sale",
         "MONTHLYVALUEADDITIONTARGETV/SACTUAL": "Monthly Value Addition Target V/s Actual",
         "MONTHLYSALESANDTARGET": "Monthly Sales and Target",
-        "CUSTOMERCIGRADEPERKGRATEREALIZATION": "Customer CI Grade Per KG Rate Realization",
+        "CUSTOMERCIGRADEPERKGRATEREALIZATION": "Customerwise Per KG Rate Realization",
         "ENQUIRYREGISTER": "Enquiry Register",
-        "DAILYSALESDATA": "Daily Sales Data"
+        "DAILYSALESDATA": "Daily Sales Data",
+        "TURNOVER" : "Turnover"
       }
     },
     "FINANCE": {
@@ -53,16 +54,6 @@
       "TEXT": "Quatity Control",
       "LIST": {
         "CUSTOMERWISECOMPLAINTSRECEIVED": "Customer Wise Complaints Received"
-      }
-    },
-    "CHARTS": {
-      "TEXT": "Chart",
-      "LIST": {
-        "APEX": "Apex",
-        "CHARTJS" : "Chartjs",
-        "CHARTIST": "CHARTIST",
-        "ECHART": "ECHART"
-
       }
     }
   }
